<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UI.BatteryInfo.BatteryFragment">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/firesans"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:text="BATTERY CHARGE"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/help_batteryInfo"
                android:layout_marginEnd="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_question_setting" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_item_setting"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="15dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="6dp"
                app:layout_constraintBottom_toBottomOf="@+id/currentPin"
                app:layout_constraintTop_toBottomOf="@+id/currentPin">

                <TextView
                    android:id="@+id/currentPin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_current_pin" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_70"
                    app:layout_constraintEnd_toEndOf="@+id/currentPinBar"
                    tools:layout_editor_absoluteY="4dp" />

                <com.mackhartley.roundedprogressbar.RoundedProgressBar
                    android:id="@+id/currentPinBar"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/currentPin"
                    app:rpbBackgroundColor="#CCCCCC"
                    app:rpbBackgroundTextColor="#E0000F"
                    app:rpbCornerRadius="20dp"
                    app:rpbProgressColor="#FF57FB73"
                    app:rpbProgressTextColor="#4ADBFF"
                    app:rpbTextPadding="5dp"
                    app:rpbTextSize="10dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="6dp"
                app:layout_constraintBottom_toBottomOf="@+id/currentPin"
                app:layout_constraintTop_toBottomOf="@+id/currentPin">

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperaturebar" />

                <TextView
                    android:id="@+id/temperature1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_34c"
                    app:layout_constraintEnd_toEndOf="@+id/temperatureBar"
                    tools:layout_editor_absoluteY="4dp" />

                <com.mackhartley.roundedprogressbar.RoundedProgressBar
                    android:id="@+id/temperatureBar"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/temperature"
                    app:rpbBackgroundColor="#CCCCCC"
                    app:rpbBackgroundTextColor="#E0000F"
                    app:rpbCornerRadius="20dp"
                    app:rpbProgress="50"
                    app:rpbProgressColor="#57FB73"
                    app:rpbProgressTextColor="#4ADBFF"
                    app:rpbTextPadding="5dp"
                    app:rpbTextSize="10dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="6dp"
                app:layout_constraintBottom_toBottomOf="@+id/currentPin"
                app:layout_constraintTop_toBottomOf="@+id/currentPin">

                <TextView
                    android:id="@+id/Voltage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voltage" />

                <TextView
                    android:id="@+id/Voltage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3700_mv"
                    app:layout_constraintEnd_toEndOf="@+id/VoltageBar"
                    tools:layout_editor_absoluteY="4dp" />

                <com.mackhartley.roundedprogressbar.RoundedProgressBar
                    android:id="@+id/VoltageBar"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/Voltage"
                    app:rpbBackgroundColor="#CCCCCC"
                    app:rpbBackgroundTextColor="#E0000F"
                    app:rpbCornerRadius="20dp"
                    app:rpbProgressColor="#FF57FB73"
                    app:rpbProgressTextColor="#4ADBFF"
                    app:rpbTextPadding="5dp"
                    app:rpbTextSize="10dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:columnCount="2"
            android:rowCount="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_item_setting">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/img_votage_battery" />

                <TextView
                    android:id="@+id/txt_pctPin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="@string/_70"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:lineHeight="22sp" />

                <TextView
                    android:id="@+id/txt_pin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B9B9BF"
                    android:textSize="12sp"
                    android:lineHeight="16sp"
                    android:padding="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/your_pin_is_good" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_item_setting">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/charging_since"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/img_tempeature_battery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="2:38 PM"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:lineHeight="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B9B9BF"
                    android:textSize="12sp"
                    android:padding="2dp"
                    android:lineHeight="16sp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/li_on" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_item_setting">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/img_battery_type" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="@string/battery_type"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:lineHeight="22sp" />

                <TextView
                    android:id="@+id/battery_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B9B9BF"
                    android:textSize="12sp"
                    android:lineHeight="16sp"
                    android:padding="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_horizontal"
                    android:text="Li-on" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_item_setting">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/battery_capacity"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btrCapacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="Battery Capacity"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:lineHeight="22sp" />

                <TextView
                    android:id="@+id/temperature_battery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B9B9BF"
                    android:textSize="12sp"
                    android:padding="2dp"
                    android:lineHeight="16sp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_horizontal"
                    android:text="Li-on" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_item_setting">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/img_battery_healthy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="@string/battery_health"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:lineHeight="22sp" />

                <TextView
                    android:id="@+id/battery_health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B9B9BF"
                    android:textSize="12sp"
                    android:lineHeight="16sp"
                    android:padding="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/good" />


            </LinearLayout>

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_item_setting">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/img_tempeature_battery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="Battery"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:lineHeight="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B9B9BF"
                    android:textSize="12sp"
                    android:padding="2dp"
                    android:lineHeight="16sp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_horizontal"
                    android:text="Li-on" />
            </LinearLayout>

        </GridLayout>

    </LinearLayout>
</layout>