<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".UI.HomeFramgnet.HomeFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="@drawable/bg_item_setting">

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:text="BATTERY CHARGE"
                        android:textSize="20sp"
                        android:fontFamily="@font/firesans"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:id="@+id/search_more1"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_search" />

                    <ImageView
                        android:id="@+id/helphome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_question_setting" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/battery_remaining"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout3"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="104dp"
                    android:layout_height="59dp"
                    android:text="100%"
                    android:textSize="40dp"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/charg_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_phone_is_charging"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <com.mikhaellopez.circularprogressbar.CircularProgressBar
                    android:id="@+id/progressBar1"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

                <TextView
                    android:id="@+id/pinC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100%"
                    android:textColor="@color/green"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/progressBar1"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar1"
                    app:layout_constraintStart_toStartOf="@+id/progressBar1"
                    app:layout_constraintTop_toTopOf="@+id/progressBar1" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/trending_gifs_for_you"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/viewAll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:gravity="end"
                    android:text="@string/viewall" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvApi1"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_marginVertical="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/trending_image_for_you"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gotosearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:gravity="end"
                    android:text="@string/viewall" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvApi3"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_marginVertical="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/your_sticker"
                    android:textStyle="bold" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvApi2"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_marginVertical="10dp" />

        </LinearLayout>

    </ScrollView>
</layout>